comutil changes for __uuidof support
Patched some whiteroom code that was previously compiled in MSVC to be
GNU GCC compatible.

git-svn-id: svn+ssh://svn.code.sf.net/p/mingw-w64/code/trunk@2436 4407c894-4637-0410-b4f5-ada5f102cad1
(cherry picked from commit 0d81bc40906a8cc0fd0b296bfaf5b2949e88616d)

--- a/mingw-w64-headers/ChangeLog
+++ b/mingw-w64-headers/ChangeLog
@@ -22,3 +22,7 @@
 	* Move aux scripts to subdir to tidy up top levels.  Upgrade
 	to autoconf-2.65.  Merge a few pieces from the trunk version
 	of configure.ac.
+
+2010-05-23  Jarrod Chesney  <jarrod.chesney@gmail.com>
+
+	* Patch comutil.h, comip.h and comdef.h to compile with GNU GCC
