AUTHORS: Add myself.

--- a/AUTHORS
+++ b/AUTHORS
@@ -40,6 +40,7 @@ Doug Semler       <dougsemler at gmail dot com>
 Jacek Caban       <jacek at codeweavers dor com>
 Corinna Vinschen  <vinschen at redhat dot com>
 André Hentschel   <nerv at dawncrow dot de>
+Liu Hao           <lh_mouse at 126 dot com>
 
 Project members without SVN/Git access
 ==================================
