Add Ruslan Garipov to contributors list

--- a/AUTHORS
+++ b/AUTHORS
@@ -41,6 +41,7 @@ Jacek Caban       <jacek at codeweavers dor com>
 Corinna Vinschen  <vinschen at redhat dot com>
 André Hentschel   <nerv at dawncrow dot de>
 Liu Hao           <lh_mouse at 126 dot com>
+Ruslan Garipov    <ruslanngaripov at gmail dot com>
 
 Project members without SVN/Git access
 ==================================
