--- a/mingw-w64-crt/gdtoa/README
+++ b/mingw-w64-crt/gdtoa/README
@@ -152,12 +152,14 @@ suffer double rounding due to use of extended-precision registers.
 For some conversions this variant of strtod is less efficient than the
 one in strtod.c when the latter is run with 53-bit rounding precision.
 
-The values that the strto* routines return for NaNs are determined by
-gd_qnan.h, which the makefile generates by running the program whose
-source is qnan.c.  Note that the rules for distinguishing signaling
-from quiet NaNs are system-dependent.  For cross-compilation, you need
-to determine arith.h and gd_qnan.h suitably, e.g., using the
-arithmetic of the target machine.
+When float or double are involved, the values that the strto* routines
+return for NaNs are determined by gd_qnan.h, which the makefile
+generates by running the program whose source is qnan.c.  For other
+types, default NaN values are specified in g__fmt.c and may need
+adjusting.  Note that the rules for distinguishing signaling from
+quiet NaNs are system-dependent.  For cross-compilation, you need to
+determine arith.h and gd_qnan.h suitably, e.g., using the arithmetic
+of the target machine.
 
 C99's hexadecimal floating-point constants are recognized by the
 strto* routines (but this feature has not yet been heavily tested).
@@ -172,10 +174,11 @@ hexadecimal digits, it is taken for the fraction bits of the resulting
 NaN; if there are two or more strings of hexadecimal digits, each
 string is assigned to the next available sequence of 32-bit words of
 fractions bits (starting with the most significant), right-aligned in
-each sequence.
+each sequence.  Strings of hexadecimal digits may be preceded by "0x"
+or "0X".
 
-For binary -> decimal conversions, I've provided just one family
-of helper routines:
+For binary -> decimal conversions, I've provided a family of helper
+routines:
 
 	g_ffmt
 	g_dfmt
@@ -183,6 +186,12 @@ of helper routines:
 	g_xfmt
 	g_xLfmt
 	g_Qfmt
+	g_ffmt_p
+	g_dfmt_p
+	g_ddfmt_p
+	g_xfmt_p
+	g_xLfmt_p
+	g_Qfmt_p
 
 which do a "%g" style conversion either to a specified number of decimal
 places (if their ndig argument is positive), or to the shortest
@@ -195,7 +204,34 @@ style and conversions with direction of rounding specified (so that, if
 desired, the decimal value is either >= or <= the binary value).
 On IEEE-arithmetic systems that provide the C99 fegetround() function,
 if compiled with -DHonor_FLT_ROUNDS, these routines honor the current
-rounding mode.
+rounding mode.  For pedants, the ...fmt_p() routines are similar to the
+...fmt() routines, but have an additional final int argument, nik,
+that for conversions of Infinity or NaN, determines whether upper,
+lower, or mixed case is used, whether (...) is added to NaN values,
+and whether the sign of a NaN is reported or suppressed:
+
+	nik = ic + 6*(nb + 3*ns),
+
+where ic with 0 <= ic < 6 controls the rendering of Infinity and NaN:
+
+	0 ==> Infinity or NaN
+	1 ==> infinity or nan
+	2 ==> INFINITY or NAN
+	3 ==> Inf or NaN
+	4 ==> inf or nan
+	5 ==> INF or NAN
+
+nb with 0 <= nb < 3 determines whether NaN values are rendered
+as NaN(...):
+
+	0 ==> no
+	1 ==> yes
+	2 ==> no for default NaN values; yes otherwise
+
+ns = 0 or 1 determines whether the sign of NaN values reported:
+
+	0 ==> distinguish NaN and -NaN
+	1 ==> report both as NaN
 
 For an example of more general conversions based on dtoa(), see
 netlib's "printf.c from ampl/solvers".
@@ -228,17 +264,18 @@ to free the value s returned by dtoa or gdtoa.  It's OK to do so whether
 or not MULTIPLE_THREADS is #defined, and the helper g_*fmt routines
 listed above all do this indirectly (in gfmt_D2A(), which they all call).
 
-By default, there is a private pool of memory of length 2000 bytes
+By default, there is a private pool of memory of length 2304 bytes
 for intermediate quantities, and MALLOC (see gdtoaimp.h) is called only
-if the private pool does not suffice.   2000 is large enough that MALLOC
+if the private pool does not suffice.   2304 is large enough that MALLOC
 is called only under very unusual circumstances (decimal -> binary
 conversion of very long strings) for conversions to and from double
 precision.  For systems with preemptively scheduled multiple threads
 or for conversions to extended or quad, it may be appropriate to
-#define PRIVATE_MEM nnnn, where nnnn is a suitable value > 2000.
+#define PRIVATE_MEM nnnn, where nnnn is a suitable value > 2304.
 For extended and quad precisions, -DPRIVATE_MEM=20000 is probably
 plenty even for many digits at the ends of the exponent range.
-Use of the private pool avoids some overhead.
+Use of the private pool avoids some overhead.  When MULTIPLE_THREADS
+is #defined, only thread 0 uses PRIVATE_MEM.
 
 Directory test provides some test routines.  See its README.
 I've also tested this stuff (except double double conversions)
@@ -252,7 +289,7 @@ with Vern Paxson's testbase program: see
 
 Some system-dependent additions to CFLAGS in the makefile:
 
-	HU-UX: -Aa -Ae
+	HP-UX: -Aa -Ae
 	OSF (DEC Unix): -ieee_with_no_inexact
 	SunOS 4.1x: -DKR_headers -DBad_float_h
 
